[package]
name = "mod_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mod_analyzer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "indexmap"] }
pyo3-log="0.13.2"
walkdir = "2.5.0"
indexmap = "2.2.6"
tree-sitter = "0.25"
tree-sitter-paradox = { git = "https://github.com/alan871125/tree-sitter-paradox" }
regex = "1.12.2"
rayon = "1.8"
log = "0.4"

[profile.dev]
debug = 2
strip = "none"

[profile.release]
# Keep some symbols so breakpoints can still bind if you accidentally
# run a release build.
debug = 1
strip = "none"